Fix bug with not visible filter buttons in Chrome

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -174,6 +174,10 @@ button.btn-flat:focus {
 	background-color: unset;
 }
 
+.side-nav {
+	height: 100%;
+}
+
 // Modal
 @media #{$small-and-down} {
 	.modal {
